# scrapyy

./: Cargo.toml  README.md
.memsearch/memory/: 2026-04-30.md
examples/: Cargo.toml  extraction.rs  simple.rs
examples/src/: main.rs
src/: config.rs  error.rs  extract.rs  html.rs  lib.rs  linker.rs  normalizer.rs  parse_from_html.rs  retrieve.rs  similarity.rs  transformation.rs  utils.rs
