[package]
name = "scrapyy"
edition = "2021"
description = "HTML parsing and querying with CSS selectors"
keywords = ["html", "css", "selector", "scraping"]
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
scraper = "0.21.0"
tokio = { version = "1", features = ["full"] }
lazy_static = { version = "1.5.0" }
reqwest = { version = "0.12.9", features = ["json"] }
ammonia = "4.0.0"
readability = "0.3.0"
html2text = "0.13.3"
url = "2.5.3"
tempfile = "3.10.1"
paste = "1.0.15"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
encoding_rs = "0.8.35"
thiserror = "2.0.3"
