[package]
name = "scrapyy"
edition = "2024"
description = "HTML parsing and querying with CSS selectors"
keywords = ["html", "css", "selector", "scraping"]
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]

[dependencies]
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
scraper = "0.26.0"
tokio = { version = "1.52.1", features = ["full"] }
lazy_static = "1.5.0"
reqwest = { version = "0.13.3", features = ["json"] }
ammonia = "4.1.2"
readability = "0.3.0"
url = "2.5.8"
tempfile = "3.27.0"
paste = "1.0.14"
html2text = "0.17.1"
markup5ever_rcdom = "0.3"
# markup5ever = "0.16.0"
html5ever = "0.39.0"
encoding_rs = "0.8.35"
thiserror = "2.0.18"
